fix: update product reviews section styling and spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -684,12 +684,10 @@ img {
 
 .card {
   position: relative;
-  height: -moz-fit-content;
-  height: fit-content;
 }
 .card:hover .card_wishlist, .card:hover .card_footer {
   opacity: 1;
-  transition: all 0.3s ease-out;
+  transition: all 0.2s ease-out;
   cursor: pointer;
 }
 .card span {
@@ -698,21 +696,22 @@ img {
   font-weight: 600;
 }
 .card_img {
-  width: 100%;
   background-color: var(--neutral-level-2);
   padding: 1.2rem;
   margin-bottom: 0.5rem;
-  height: 30rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 30rem;
 }
 .card_img img {
-  height: 23rem;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
-  width: auto;
+  width: 100%;
   margin-bottom: 0.5rem;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .card_img ~ * {
   margin: 0.3rem 0;
@@ -2033,10 +2032,42 @@ img {
   border: 1px solid var(--neutral-level-4);
   border-radius: 0.99rem;
 }
+.product form {
+  border: 1px solid #ccc;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.8rem;
+  margin-bottom: 2rem;
+  border-radius: 0.8rem;
+}
+.product form input {
+  flex-basis: 90%;
+}
+
+.reviews_summary {
+  padding: 2rem 0;
+}
+.reviews_sortby {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 2rem 0;
+  margin-bottom: 2rem;
+}
+.reviews_sortby select {
+  transition: all 0.8s ease-in-out;
+  background-color: #fff;
+  width: 15rem;
+  padding: 0.8rem 1.4rem;
+  border-radius: 0.8rem;
+  outline: none;
+  border: 0.1rem solid var(--neutral-level-4);
+}
 .reviews_card {
   border-bottom: 0.2rem solid var(--neutral-level-3);
   margin-bottom: 1.5rem;
   height: auto;
+  padding: 1.5rem 0;
 }
 .reviews_customer {
   display: flex;
@@ -2059,7 +2090,6 @@ img {
 }
 .reviews_stars span:last-of-type {
   color: #111;
-  font-weight: 700;
 }
 .reviews_text {
   padding-left: 14rem;
