--- a/assets/sass/layout/_product.sass
+++ b/assets/sass/layout/_product.sass
@@ -125,15 +125,42 @@
     border-radius: .99rem
   &_info
     // border: 2px solid #ccc
+  form
+    border: 1px solid #ccc
+    display: flex
+    justify-content: space-between
+    padding: .8rem
+    margin-bottom: 2rem 
+    border-radius: .8rem
+    input
+      flex-basis: 90%
 
 
 .reviews
+  &_summary
+    padding: 2rem 0
   &_container
     ///import css-variables from 
+  
+  &_sortby
+    display: flex
+    width: 100%
+    justify-content: space-between
+    padding: 2rem 0
+    margin-bottom: 2rem
+    select
+      transition: all .8s ease-in-out
+      background-color: #fff
+      width: 15rem
+      padding: 0.8rem 1.4rem
+      border-radius: .8rem
+      outline: none
+      border: .1rem solid var(--neutral-level-4)
   &_card
     border-bottom: .2rem solid var(--neutral-level-3) 
     margin-bottom: 1.5rem
     height: auto
+    padding: 1.5rem 0
   &_customer
     display: flex
     gap: 4rem
@@ -153,7 +180,7 @@
       &:last-of-type
         color: #111
         // font-size: 4rem
-        font-weight: 700
+        // font-weight: 700
   &_text
     padding-left: 14rem
     color:  var(--neutral-level-4)
